# ecg

./: .gitignore  build.gradle  keystore.properties  settings.gradle  swm.jks
app/: CMakeLists.txt  app-customer-release.apk  build.gradle  google-services.json  proguard-rules.pro  swm.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SWM_ECG_ALGO.cpp  SWM_ECG_ALGO.h  SWM_algo_HRV.cpp  SWM_algo_HRV.h  matrix.h  mymath.cpp  swm_ecg_algo_jni.cpp
app/src/main/cpp/AlgorithmWare/: SWM_ECG_ALGO.cpp  SWM_ECG_ALGO.h  SWM_Filter.cpp  SWM_Filter.h
app/src/main/cpp/GlobalWare/: SWM_COM_Header.h
app/src/main/cpp/ecg/: SWM_ECG_ALGO.cpp  swm_ecg_algo_jni.cpp
app/src/main/cpp/hrv/: SWM_algo_HRV.h  matrix.h  mymath.h  mymath_matrix.cpp  swm_ecg_hrv_algo_jni.cpp
app/src/main/res/drawable/: swm_bar.xml  swm_bar_energy.xml  swm_big_card.xml  swm_circle.xml  swm_cta_btn_oval.xml  swm_cta_pressed_background.xml  swm_dialog.xml  swm_enabled_rect.xml  swm_flash.xml  swm_heart_main.xml  swm_inactive_background.xml  swm_inactive_cta_button.xml  swm_main.xml  swm_menu_item.xml  swm_menu_normal.xml  swm_menu_pressed.xml  swm_meter.xml  swm_ripple.xml  swm_selectable_button.xml  swm_stop_background.xml  swm_weak_cta.xml
app/src/main/res/layout/: activity_accelerator.xml  activity_app_info.xml  activity_body_info.xml  activity_coach.xml  activity_composite.xml  activity_device_discover_and_conn.xml  activity_ecg.xml  activity_emergency.xml  activity_engineering_main.xml  activity_flash.xml  activity_frequency.xml  activity_gender_and_age.xml  activity_heart.xml  (+38 more)
(+566 files in other folders)
